# hcalc

./: CalculationTree.hs  hcalc.cabal
HCalc/: Calculator.hs  Parse.hs  Parser.hs  ReversePolish.hs
HCalc/Useful/: Char.hs  Checks.hs  Grammar.hs  Parsers.hs  Strings.hs
HCalc/Utils/: HFunctions.hs  HNumbers.hs  List.hs  TokenType.hs
src/HCalc/: ReversePolish.hs
src/HCalc/Utils/: HFunctions.hs  Parser.hs  Token.hs
